<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.entirej</groupId>
	<artifactId>entirej-core</artifactId>
	<version>${VERSION}-SNAPSHOT</version>
	<name>Entirej Core</name>
	<build>
		<finalName>entirej-core-${VERSION}</finalName>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>tests</testSourceDirectory>
		<resources>
			<resource>
				<directory>tests</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Specification-Title>${project.name}</Specification-Title>
							<Specification-Version>${project.version}</Specification-Version>
							<Specification-Vendor>CRESOFT AG</Specification-Vendor>
							<Implementation-Title>${project.name}</Implementation-Title>
							<Implementation-Version>${project.version}.${maven.build.timestamp}</Implementation-Version>
							<Built-By></Built-By>
							<Build-Jdk></Build-Jdk>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<links>
						<link>https://docs.oracle.com/en/java/javase/17/docs/api/</link>
					</links>
					<javadocVersion>17</javadocVersion>
					<source>17</source>
					<show>public</show>
					<doctitle>Entirej API</doctitle>
					<title>Entirej API</title>
					<excludePackageNames>org.entirej.framework.core.properties.reader.*</excludePackageNames>
				</configuration>
			</plugin>
			
			<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-source-plugin</artifactId>
		        <version>3.3.1</version>
		     </plugin>
		     
		     
		     <plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<altDeploymentRepository>internal.repo::default::file://${built.repo.dir}</altDeploymentRepository>
				</configuration>
			</plugin>

	
			<plugin>
				<groupId>com.github.github</groupId>
				<artifactId>site-maven-plugin</artifactId>
				<version>0.10</version>
				<configuration>
					<message>Maven artifacts for ${project.groupId}:${project.artifactId}:${project.version} ~${maven.build.timestamp}</message>
					<noJekyll>true</noJekyll>                                                                          
					<outputDirectory>${built.repo.dir}</outputDirectory>
					<merge>true</merge>
					<repositoryOwner>entirej</repositoryOwner>
					<repositoryName>mavenrepo</repositoryName> 
					<branch>refs/heads/gh-pages</branch>
					<path>maven/${MAVEN.REPO.PATH}</path>
					<oauth2Token>${GITHUB.OAUTH}</oauth2Token>
					<userName>${GITHUB.USER}</userName>
					<includes>
						<include>**/*</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>site</goal>
						</goals>
						<phase>deploy</phase>
					</execution>
				</executions>
			</plugin>
			
		</plugins>

		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ftp</artifactId>
				<version>2.4</version>
			</extension>
		</extensions>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.16</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.11.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>5.11.3</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
	<properties>
		<VERSION>DEVELOPMENT</VERSION>
		<MAVEN.REPO.PATH>development</MAVEN.REPO.PATH>
		<GITHUB.OAUTH></GITHUB.OAUTH>
		<built.repo.dir>${project.build.directory}/repo</built.repo.dir>
	</properties>
</project>